# webigeo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
webgpu/: Buffer.h  CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  RenderResourceRegistry.cpp  RenderResourceRegistry.h  gpu_utils.cpp  gpu_utils.h  webgpu_interface.cpp  webgpu_interface.hpp
webgpu/base/: CMakeLists.txt  Context.h  Framebuffer.cpp  Framebuffer.h
webgpu/base/shaders/: normals_util.wgsl  position_util.wgsl  tile_util.wgsl
webgpu/base/timing/: CpuStopwatch.cpp  CpuStopwatch.h  GpuStopwatch.cpp  GpuStopwatch.h  StopwatchManager.cpp  StopwatchManager.h  StringId.h
webgpu/compute/: CMakeLists.txt  NodeRegistry.cpp
webgpu/compute/nodes/: GeoTiffNode.cpp  GeoTiffNode.h  TextureToRgba8Node.cpp  TextureToRgba8Node.h
webgpu/compute/shaders/: texture_to_rgba8_f32_compute.wgsl  texture_to_rgba8_i32_compute.wgsl  texture_to_rgba8_u32_compute.wgsl
webgpu/engine/: CMakeLists.txt  Context.cpp  Context.h  UniformBufferObjects.h  Window.cpp  Window.h
webgpu/engine/cloud/: CloudRenderer.cpp  CloudRenderer.h
webgpu/engine/sky/: util.h  (+16 more)
webgpu/raii/: BindGroup.cpp  BindGroup.h  BindGroupLayout.cpp  CombinedComputePipeline.cpp  CombinedComputePipeline.h  Pipeline.cpp  PipelineLayout.cpp  RawBuffer.h  RenderPassEncoder.cpp  RenderPassEncoder.h  Texture.cpp  Texture.h  TextureWithSampler.cpp  TextureWithSampler.h  base_types.h
webgpu/shaders/: normals_util.wgsl  snow.wgsl  tile_hashmap.wgsl
webgpu/timing/: TimerInterface.cpp  TimerInterface.h  WebGpuTimer.cpp  WebGpuTimer.h
webgpu/util/: ShaderPreprocessor.cpp  ShaderPreprocessor.h  VertexBufferInfo.h  VertexFormat.h  string_cast.cpp  string_cast.h
webgpu_app/: App.cpp  App.h  CMakeLists.txt  CloudAPIService.cpp  CloudAPIService.h  CloudsManager.cpp  CloudsManager.h  GuiManager.cpp  GuiManager.h  ImGuiManager.cpp  ImGuiManager.h  InputMapper.cpp  InputMapper.h  RenderingContext.cpp  RenderingContext.h  SearchController.cpp  SearchController.h  SearchService.cpp  SearchService.h  TerrainRenderer.cpp  TerrainRenderer.h  WebInterop.cpp  WebInterop.h  main.cpp  resources.qrc
webgpu_app/atmosphere/: AtmospherePanel.cpp
webgpu_app/cloud/: CloudPanel.cpp
webgpu_app/compute/: NodeGraphPanel.cpp  NodeGraphPanel.h  OverlayRenderNode.cpp  OverlayRenderNode.h
webgpu_app/dps/: Property.cpp  Property.h  PropertyGroup.cpp  PropertyGroup.h  PropertyManager.cpp  PropertyManager.h  TypedProperty.h
webgpu_app/gui/: GuiManager.cpp  GuiManager.h
webgpu_app/imgui/: AboutPanel.cpp  AboutPanel.h  AppPanel.cpp  AppPanel.h  AtmospherePanel.cpp  CloudPanel.cpp  ImGuiPanel.h  LogoPanel.cpp  NodeGraphPanel.cpp  NodeGraphPanel.h  OverlaysPanel.cpp  OverlaysPanel.h  SearchPanel.cpp  SearchPanel.h  ShadingPanel.cpp  ShadingPanel.h  TrackPanel.cpp  TrackPanel.h
webgpu_app/overlay/: OverlaysPanel.cpp  OverlaysPanel.h
webgpu_app/shell/: webgpu_app.css  webgpu_app.html  webgpu_hacks.js
webgpu_app/timing/: CpuTimer.cpp  CpuTimer.h  GuiTimerManager.cpp  GuiTimerManager.h  TimerInterface.cpp  TimerInterface.h  WebGpuTimer.cpp  WebGpuTimer.h
webgpu_app/track/: TrackPanel.cpp
webgpu_app/ui/: AppPanel.cpp  CameraPanel.cpp  SearchPanel.cpp  ShadingPanel.cpp  TimingPanel.cpp
webgpu_app/util/: dark_mode.cpp  error_logging.cpp  error_logging.h  url_tools.cpp  url_tools.h
webgpu_engine/: Buffer.cpp  Buffer.h  CMakeLists.txt  CloudGeometry.cpp  CloudGeometry.h  CloudGeometryConstants.h  Context.cpp  Context.h  Framebuffer.cpp  Framebuffer.h  PipelineManager.cpp  PipelineManager.h  PipelineSettings.cpp  PipelineSettings.h  ShaderModuleManager.cpp  ShaderModuleManager.h  TileGeometry.cpp  TileGeometry.h  TileManager.cpp  TileManager.h  TrackRenderer.cpp  TrackRenderer.h  UniformBufferObjects.h  Window.cpp  Window.h  compute.cpp  compute.h  gpu_utils.cpp  gpu_utils.h
webgpu_engine/atmosphere/: atmosphere.cpp  atmosphere.h  config.h  lut_renderer.cpp  lut_renderer.h  params.cpp  params.h  pipelines.cpp  pipelines.h  resources.cpp  resources.h  shaders.cpp  shaders.h  sky_renderer.cpp  sky_renderer.h  uniforms.h  util.cpp  util.h
webgpu_engine/cloud/: CloudRenderer.cpp  CloudRenderer.h
webgpu_engine/compute/: GpuHashMap.cpp  GpuHashMap.h  GpuTileId.cpp  GpuTileId.h  GpuTileStorage.cpp  GpuTileStorage.h  NodeGraph.cpp  NodeGraph.h  NodeGraphRenderer.cpp  NodeGraphRenderer.h  NodeRegistry.cpp  NodeRegistry.h  NodeRenderer.cpp  NodeRenderer.h  RectangularTileRegion.cpp  RectangularTileRegion.h  nodes.cpp  nodes.h
webgpu_engine/overlay/: HeightLinesOverlay.cpp  HeightLinesOverlay.h  OverlayRenderNode.cpp  OverlayRenderNode.h  OverlayRenderer.cpp  ScreenSpaceSnowOverlay.cpp  ScreenSpaceSnowOverlay.h  TextureOverlay.cpp  TextureOverlay.h  TileDebugOverlay.cpp  TileDebugOverlay.h
webgpu_engine/raii/: Buffer.cpp  Buffer.h  RenderPassEncoder.cpp  RenderPassEncoder.h  Texture.cpp  Texture.h  base_types.h
webgpu_engine/renderer/: AtmosphereRenderer.cpp  AtmosphereRenderer.h  CloudRenderer.h  OverlayRenderer.cpp  OverlayRenderer.h  TileMeshRenderer.cpp  TileMeshRenderer.h  TrackRenderer.cpp  TrackRenderer.h
webgpu_engine/shaders/: compose_pass.wgsl  render_atmosphere.wgsl  render_clouds.wgsl  render_lines.wgsl  render_tiles.wgsl
webgpu_engine/tile_mesh/: TileMeshRenderer.cpp  TileMeshRenderer.h
webgpu_engine/track/: TrackRenderer.cpp  TrackRenderer.h
webgpu_engine/tracks/: 2024-02-03_11-36-26_winterwandern_12775448_Trofaiach__Estiria_Austria.gpx
webgpu_engine/wgsl_shaders/: Tile.wgsl  area_of_influence_compute.wgsl  atmosphere_frag.wgsl  avalanche_influence_area_compute.wgsl  avalanche_trajectories_buffer_to_texture_compute.wgsl  avalanche_trajectories_compute.wgsl  color_mapping.wgsl  compose_frag.wgsl  compose_pass.wgsl  d8_compute.wgsl  downsample_compute.wgsl  dummy_compute.wgsl  encoder.wgsl  filtering.wgsl  line_render.wgsl  normals_compute.wgsl  normals_util.wgsl  render_clouds.wgsl  render_tiles.wgsl  shared_config.wgsl  snow.wgsl  snow_compute.wgsl  tile_hashmap.wgsl  tile_id.wgsl  tile_util.wgsl  tonemap.wgsl  upsample_textures_compute.wgsl  upscale_clouds.wgsl
(+394 files in other folders)
